--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_codes_barres">Codes-barres</string>
     <string name="title_activity_ibeacon">Balises iBeacon</string>
     <string name="title_activity_capteurs">Capteurs</string>
+    <string name="scann">scann</string>
 </resources>
