--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -112,23 +112,46 @@
 	\section*{Balises NFC}
 	\subsection*{Manipulation}
 	\subsection*{Réponse aux questions}
+	Sachant que les collaborateurs de l'entreprise UBIQOMP SA se déplacent en véhiculant des informations précieuses dans leurs dispositifs informatiques mobiles (munis de dispositifs de lecture NFC), et qu'ils sont amenés à se rendre dans des zones à risque, un expert a fait les estimations suivantes : 
 	
+	Enseignant: Fabien Dutoit 5 / 8 Assistants: Michaël Sandoz, Luca Bianchi 
+	\begin{itemize}
+		\item La probabilité de vol d'un mobile par une personne malintentionnée et capable d'utiliser les données à des fins préjudiciables pour la société est de 1\% 
+		\item La probabilité que le mot de passe puisse être découvert, soit par analyse des traces de doigts sur l'écran, soit par observation en cours d'utilisation est de 4\% 
+		\item La probabilité de vol du porte-clés est de 0.1\%  
+		\item Environ 10\% des criminels susceptibles d'accéder aux données du mobile sait que le porteclés permet l’accès au mobile.
+	\end{itemize}
+
+	 Quelle est la probabilité moyenne globale que des données soient perdues, dans le cas où il faut la balise ET le mot de passe, ainsi que dans le cas où il faut la balise OU le mot de passe (on négligera dans le calcul la probabilité de l’intersection des deux ensembles), ou encore le cas où seule la balise est nécessaire ? En d'autres termes, si l'on envoie cent collaborateurs en déplacement, quel est le risque encouru de vol de données sensibles ? Mettre vos conclusions en rapport avec l'inconfort subjectif de chaque solution. Peut-on améliorer la situation en introduisant un contrôle des informations d'authentification par un serveur éloigné (transmission d'un hash SHA256 du mot de passe et de la balise NFC) ? Si oui, à quelles conditions ? Quels inconvénients ? Proposer une stratégie permettant à la société UBIQOMP SA d'améliorer grandement son bilan sécuritaire, en détailler les inconvénients pour les utilisateurs et pour la société. 
+	 
+	 {\color[rgb]{0,0.5,0.23}\textbf{Réponse}}
+	 
 	
 	\section*{Codes-barres}
 	\subsection*{Manipulation}
 	\subsection*{Réponse aux questions}
+	Comparer la technologie à codes-barres et la technologie NFC, du point de vue d'une utilisation dans des applications pour smartphones, dans une optique : 
+	\begin{itemize}
+		\item Professionnelle (Authentification, droits d’accès, clés de chiffrage) 
+		\item Grand public (Billetterie, contrôle d’accès, e-paiement) 
+		\item Ludique (Preuves d'achat, publicité, etc.)
+		\item Financier (Coûts pour le déploiement de la technologie, possibilités de recyclage, etc.) 
+	\end{itemize}
+
+	{\color[rgb]{0,0.5,0.23}\textbf{Réponse}}
 	
 	
 	\section*{Balises iBeacon}
 	\subsection*{Manipulation}
 	\subsection*{Réponse aux questions}
-	
+	Les iBeacons sont très souvent présentés comme une alternative à NFC. Pouvez-vous commenter cette affirmation en vous basant sur 2-3 exemples de cas d’utilisations (use-cases) concrets (par exemple epaiement, second facteur d’identification, accéder aux horaires à un arrêt de bus, etc.). 
+
+	{\color[rgb]{0,0.5,0.23}\textbf{Réponse}}
 	
 	\section*{Capteurs}
 	\subsection*{Manipulation}
 	\subsection*{Réponse aux questions}
-	
-	
+	Une fois la manipulation effectuée, vous constaterez que les animations de la flèche ne sont pas fluides, il va y avoir un tremblement plus ou moins important même si le téléphone ne bouge pas. Veuillez expliquer quelle est la cause la plus probable de ce tremblement et donner une manière (sans forcément l’implémenter) d’y remédier. 
 	
 	{\color[rgb]{0,0.5,0.23}\textbf{Réponse}}
 	
