Clean and authentication timeout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">SYM - Laboratoire 3</string>
     <string name="title_activity_main">Laboratoire Accueil</string>
-    <string name="title_activity_rfc">Balises RFC</string>
+    <string name="title_activity_nfc">Balises NFC</string>
+    <string name="title_activity_authenticated">Authenticated Page</string>
     <string name="title_activity_codes_barres">Codes-barres</string>
     <string name="title_activity_ibeacon">Balises iBeacon</string>
     <string name="title_activity_capteurs">Capteurs</string>
